hphp/test/zend/bad/zend-generators/generator_throwing_in_foreach.php
<?php

function gen() {
    throw new Exception("foo");
    yield; // force generator
}

foreach (gen() as $value) { }

?>